--- a/aplicacion1/src/app/components/tienda/tienda.component.html
+++ b/aplicacion1/src/app/components/tienda/tienda.component.html
@@ -1,4 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <tienda></tienda>
-  </div>
+<div >
+  <h1>
+   Esta es la tienda
+  </h1>
+
+</div>
+
+
