--- a/aplicacion1/src/app/components/tienda/tienda.component.html
+++ b/aplicacion1/src/app/components/tienda/tienda.component.html
@@ -3,7 +3,14 @@
   <h1>
    Esta es la tienda
   </h1>
-
 </div>
+  <ul>
+    <li>
+    Camiseta roja
+    </li>
+    <li>Camiseta</li>
+  </ul>
+  
+
 
 
