--- a/aplicacion1/src/app/app.component.html
+++ b/aplicacion1/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <tienda></tienda>
+<div >
+ <tienda></tienda>
+<parque></parque>
+
   </div>
