--- a/aplicacion1/src/app/components/parque/parque.component.css
+++ b/aplicacion1/src/app/components/parque/parque.component.css
@@ -1,6 +1,18 @@
-div{
-    background-color: red;
+.black{
+    background-color: #eee;
+    color: black;
 }
-h1{
-    color:black;
+.component2{
+ background-color: #333;
+ color: white;
+ padding: 20px;
+}
+.btn {
+    padding: 20px;
+    color:white;
+    background-color: brown;
+    margin: 3px;
+}
+.btn:hover{
+    background-color: palevioletred;
 }
