--- a/aplicacion1/src/app/components/tienda/tienda.component.html
+++ b/aplicacion1/src/app/components/tienda/tienda.component.html
@@ -1,3 +1,11 @@
+<p>Utilizar jquery dentro de Angular</p>
+<button id="botonjq">Mostrar textos</button><br><br>
+<p id="textojq" class="alert alert-warning">
+ Texto escrito desde jquery
+
+</p>
+
+<hr>
 padre:
 <h1>{{titulo}}</h1>
 <ul>
